--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@emotion/styled": "^11.10.6",
         "@fontsource/roboto": "^4.5.8",
         "@mui/icons-material": "^5.11.11",
+        "@mui/material": "^5.11.11",
         "@types/node": "^18.14.6",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
@@ -39,6 +40,12 @@
         "react-router-dom": "^6.8.2",
         "react-scripts": "^5.0.1",
         "typescript": "^4.9.5"
+    },
+    "peerDependencies": {
+        "@babel/core": ">=7.0.0 <8.0.0",
+        "@babel/plugin-syntax-flow": "^7.14.5",
+        "@babel/plugin-transform-react-jsx": "^7.14.9",
+        "eslint": ">=7.0.0"
     },
     "browserslist": {
         "production": [
