--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
         "discord-api-types": "^0.37.35",
         "eslint": "^8.35.0",
         "eslint-config-prettier": "^8.6.0",
+        "eslint-import-resolver-typescript": "^3.5.3",
+        "eslint-plugin-import": "^2.27.5",
         "prettier": "^2.8.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -41,11 +43,10 @@
         "react-scripts": "^5.0.1",
         "typescript": "^4.9.5"
     },
-    "peerDependencies": {
-        "@babel/core": ">=7.0.0 <8.0.0",
+    "devDependencies": {
+        "@babel/core": ">=7.0.0-0 <8.0.0",
         "@babel/plugin-syntax-flow": "^7.14.5",
-        "@babel/plugin-transform-react-jsx": "^7.14.9",
-        "eslint": ">=7.0.0"
+        "@babel/plugin-transform-react-jsx": "^7.14.9"
     },
     "browserslist": {
         "production": [
