maybe fix cloudflare being dumb

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -80,6 +80,7 @@
                 },
                 "newlines-between": "never"
             }
-        ]
+        ],
+        "import/no-unresolved": "warn"
     }
 }
