--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -81,6 +81,6 @@
                 "newlines-between": "never"
             }
         ],
-        "import/no-unresolved": "warn"
+        "import/no-unresolved": "off"
     }
 }
