--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:import/recommended",
+        "plugin:import/typescript",
         "react-app",
         "prettier"
     ],
@@ -80,7 +81,6 @@
                 },
                 "newlines-between": "never"
             }
-        ],
-        "import/no-unresolved": "off"
+        ]
     }
 }
