--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -74,7 +74,7 @@
         ],
         "@typescript-eslint/no-non-null-assertion": "off",
         "import/order": [
-            "error",
+            "warn",
             {
                 "alphabetize": {
                     "order": "asc"
